Fix the discovery page

--- a/public/index.html
+++ b/public/index.html
@@ -716,10 +716,14 @@ margin-top: 50px;
                       <li class="page-scroll">
                         <a href="#why">WHY</a>
                     </li>
+                      <li>
+                        <a href="#contact">CONTACT</a>
+                    </li>
             
                     <li>
                         <a href="/users/sign_in"> SIGN IN</a>
                     </li>
+                   
                     <li>
                         <a href="/users/sign_up">SIGN UP</a>
                     </li>
