--- a/public/index.html
+++ b/public/index.html
@@ -20,12 +20,7 @@
     <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,500,300' rel='stylesheet' type='text/css'> 
     <style>
-    .target {border:1px solid #fff;border: 1px solid #fff;
-display: inline-block;
-
-float: left;
-padding: 5px 10px;}
-/* Overlay style */
+   
 
 
 
@@ -44,16 +39,6 @@ margin-left: 15px;}
 .navbar-toggle{width:50px;height:50px;}
 
 
-
-@media screen and (max-height: 30.5em) {
-  .overlay p {
-    height: 70%;
-    font-size: 34px;
-  }
-  .overlay p {
-    min-height: 34px;
-  }
-}
 
 
 
@@ -87,11 +72,7 @@ h6 {
     letter-spacing: 1px;
 }
 
-p {
-    margin: 0 0 25px;
-    font-size: 18px;
-    line-height: 1.5;
-}
+
 
 .navbar-nav{margin-top: 15px;font-family: 'Orbitron', sans-serif; font-size:14px;letter-spacing:0.1em;}
 
@@ -100,14 +81,7 @@ p {
 
 p{font-family: 'Raleway', sans-serif;font-size:16px;margin-top:26px;}
 
-img.map{opacity:0.4;-webkit-transition: all 0.4s ease-out;
--moz-transition: all 0.4s ease-out;
--ms-transition: all 0.4s ease-out;
--o-transition: all 0.4s ease-out;
-transition: all 0.4s ease-out;
-margin-bottom: 15px;}
 
-img.map:hover {opacity:0.8;}
 
 #about h2{font-family: 'Orbitron', sans-serif; font-size:16px;letter-spacing:0.1em;color:#3893d0;text-align: left;
 margin-top: 10px;margin-bottom: 15px;}
@@ -116,23 +90,13 @@ margin-top: 10px;margin-bottom: 15px;}
 #contact h2{font-family: 'Orbitron', sans-serif; font-size:12px;letter-spacing:0.1em;color:#fff;text-align: left;
 margin-top: 100px;margin-bottom: 35px;}
 
-.S-task, .L-task {margin-top:20px;}
 
 
-.S-task p{text-align:right;}
-.L-task p{text-align:left;}
-.L-border {border-right:1px solid #3893d0;padding-right:20px;}
-.L-border img {margin-left:20px;display:block;float:right;}
-.R-border img {margin-right:20px;display:block;float:left;}
-.R-border {border-left:1px solid #3893d0;padding-left:20px;}
+
+
 
 #about p{text-align:left;}
-.text-danger {
-color: #e63822;
-text-transform: uppercase;
-font-size: 12px;
-letter-spacing: 0.1em;
-}
+
 
 @media(min-width:767px) {
     p {
@@ -238,17 +202,14 @@ text-align: center;position:absolute;top:10%;left:5%;}
 
 .download-section p{display:none;}
 
-.char{height:auto; background-image:none;border-bottom: 1px solid #3893d0;padding-bottom: 15px;}
+/*.char{height:auto; background-image:none;border-bottom: 1px solid #3893d0;padding-bottom: 15px;}*/
 .skill{display:block;}
-
-.char img{margin:0 auto;margin-bottom: 20px;}
+/*
+.char img{margin:0 auto;margin-bottom: 20px;}*/
 
 #contact h2 {margin-top: 10px;}
-.S-task p {
-text-align: left; margin-top: 0px;
-}
 
-.overlay p{font-size:20px;}
+
 
 .btn-huge {
     padding: 25px;
@@ -261,14 +222,6 @@ text-align: left; margin-top: 0px;
 
 }
 
-@media (min-width:768px) and(max-width:992px) {
-.map-title{font-family: 'Orbitron', sans-serif;
-font-size: 26px;
-letter-spacing: 0.1em;
-color: #fff;
-text-align: center;position:absolute;top:253px;left:23%;}
-
-}
  @media(min-width:767px){ .navbar {
         padding: 20px 0;
         border-bottom: 0;
@@ -452,18 +405,7 @@ text-align: center;position:absolute;top:39%;left:34%;}
     color: #fff;
 }
 
-.char{
-  
-  margin: 0 auto;
-  position:relative;
-  margin-bottom:50px;
-  }
-  
-.char .avatar{position:absolute;right:0;position: absolute;
-right: 1px;
-top: -54px;
--webkit-border-radius: 50px;
-border-radius: 50px;}
+
   
 
 .char a:hover{background-color:transparent;}
@@ -590,30 +532,6 @@ border-radius: 50px;}
 
 
 
-.banner-social-buttons {
-    margin-top: 0;
-  float: left;
-}
-
-@media(max-width:1199px) {
-    ul.banner-social-buttons {
-        margin-top: 15px;
-    }
-}
-
-@media(max-width:767px) {
-    ul.banner-social-buttons>li {
-        display: block;
-        margin-bottom: 20px;
-        padding: 0;
-    }
-
-    ul.banner-social-buttons>li:last-child {
-        margin-bottom: 0;
-    }
-  .char .avatar {display:none;}
-  #cloud3 {display:none;}
-}
 
 ::-moz-selection {
     text-shadow: none;
