try to deploy without awesome

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     
 
     <!-- Fonts -->
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    
 
     <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,500,300' rel='stylesheet' type='text/css'> 
@@ -694,7 +694,7 @@ margin-top: 50px;
             <p>It's a win win for everyone.</p>
                 <div class="col-lg-6 col-md-6">
                     <h2>One Person</h2>
-                     <div class="char"><a  href="#" class="float"><img src="gym2.jpg" class="img-thumbnail"></a>
+                     <div class="char"><a  href="#" class="float"><img src="gym2.jpg" class="img-thumbnail" style="text-center"></a>
                        <div class="skill">
                     <ul>
                     <li>Lack Motivation</li>
