--- a/public/index.html
+++ b/public/index.html
@@ -670,7 +670,7 @@ margin-top: 50px;
        <img src="Spotme.png">
 
 
-                        <p class="intro-text">Go to the gym alone? <br> Need someone to cheer you up? <br> There are plenty of people sweating in the gym nearby. <br> Just SPOT me, find your gym buddy!</p>
+                        <p class="intro-text">Going to the gym alone? <br> Need someone to cheer you up? <br> There are plenty of people sweating in the gym nearby. <br> Just SPOT me, find your gym buddy!</p>
                         <div class="page-scroll">
                             <a href="#about" class="btn btn-circle">
                                 <i class="fa fa-angle-double-down animated"></i>
