--- a/public/deploy/profiles/new.html
+++ b/public/deploy/profiles/new.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta content='7' name='user-id'/>
+  <meta content='5036' name='user-id'/>
   <title>Scrailibility</title>
   <link rel="stylesheet" media="all" href="/assets/chat.self-1df277ff5c2e526a3685a4ff34a297c3f49be716bce9967b31a69fc5f5a7995e.css?body=1" data-turbolinks-track="true" />
 <link rel="stylesheet" media="all" href="/assets/chats.self-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855.css?body=1" data-turbolinks-track="true" />
 <link rel="stylesheet" media="all" href="/assets/conversations.self-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855.css?body=1" data-turbolinks-track="true" />
 <link rel="stylesheet" media="all" href="/assets/discoveries.self-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855.css?body=1" data-turbolinks-track="true" />
-<link rel="stylesheet" media="all" href="/assets/gyms.self-c042db48827c3dd46fad91711a53b5ba37797f5b627a39771129b263a8f65c60.css?body=1" data-turbolinks-track="true" />
+<link rel="stylesheet" media="all" href="/assets/gyms.self-54a664eba6d6111ab0a7dc568c58b28c68bba9c5d45febc6dd4c775a6db0b534.css?body=1" data-turbolinks-track="true" />
 <link rel="stylesheet" media="all" href="/assets/messages.self-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855.css?body=1" data-turbolinks-track="true" />
 <link rel="stylesheet" media="all" href="/assets/new.self-a003fe36013993ba0992ac83bc7626dca7229356715c677b8b0a05ab3ebccfb5.css?body=1" data-turbolinks-track="true" />
-<link rel="stylesheet" media="all" href="/assets/profiles.self-84c3712471b1c0a295ed5e0a77a1de6281f82f27dd85c4d02def84b336e72561.css?body=1" data-turbolinks-track="true" />
+<link rel="stylesheet" media="all" href="/assets/profiles.self-a06b40e2f8d2b8e4e997c571988b850ed3c5eefca6d6208bd19c2fb36b527fd2.css?body=1" data-turbolinks-track="true" />
 <link rel="stylesheet" media="all" href="/assets/registrations.self-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855.css?body=1" data-turbolinks-track="true" />
 <link rel="stylesheet" media="all" href="/assets/scaffolds.self-5f94d77bd203881080926d328f83c1c717ac18ce199b9dbcbc52a732c1e5489b.css?body=1" data-turbolinks-track="true" />
-<link rel="stylesheet" media="all" href="/assets/application.self-b35a952e67c272012837e1ea6e705f4af79bffea2b970815b5d73a0b35f4a719.css?body=1" data-turbolinks-track="true" />
+<link rel="stylesheet" media="all" href="/assets/application.self-02a96d5f7164500dce3a8c5f1837f2e1fb144ef8ea8c9906a3bf3b6ef6b4d247.css?body=1" data-turbolinks-track="true" />
   <link rel="stylesheet" media="screen" href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" />
   <script src="/assets/jquery.self-a714331225dda820228db323939889f149aec0127aeb06255646b616ba1ca419.js?body=1" data-turbolinks-track="true"></script>
 <script src="/assets/jquery_ujs.self-d456baa54c1fa6be2ec3711f0a72ddf7a5b2f34a6b4f515f33767d6207b7d4b3.js?body=1" data-turbolinks-track="true"></script>
@@ -44,7 +44,7 @@
 <script src="/assets/private_pub.self-b110feb9d6b39a3b0dc59510984a4ff9ad14a15e427afbd7474c4531dbb660a6.js?body=1" data-turbolinks-track="true"></script>
 <script src="/assets/application.self-16c207b3ca1b52afcfc7f4b662487caf1bbe084a6656bb15f693ab9de2d11be7.js?body=1" data-turbolinks-track="true"></script>
   <meta name="csrf-param" content="authenticity_token" />
-<meta name="csrf-token" content="nErLk+OIqwbNVqc9VtnwaklY6LXYO6nR0VvTnk/fY06QSEJncZuwNm7sO3dwDFEftKL0FB3ak6GOAinvXtM4mA==" />
+<meta name="csrf-token" content="CDJ8o+td6leFXJw26tEyMb2BeHsNQ2c1LiWWjc+3fIatMsJTms+JCjgypYOSg6wo1JcAi1wBhF/xPfjtnAM77w==" />
 </head>
 <body class= 'profiles'>
 		<div id="main">
@@ -71,7 +71,7 @@
 <div class="intro">
 <h2>New Profile</h2>
 
-<form class="new_profile" id="new_profile" enctype="multipart/form-data" action="/profiles" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="&#x2713;" /><input type="hidden" name="authenticity_token" value="VMj2AN3z+sJ2bsL9nsEME0nseNWRh8/dgFzQJVAZljdYyn/0T+Dh8tXUXre4FK1mtBZkdFRm9a3fBSpUQRXN4Q==" />
+<form class="new_profile" id="new_profile" enctype="multipart/form-data" action="/profiles" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="&#x2713;" /><input type="hidden" name="authenticity_token" value="JYNgRHFDxFh1ldJ1p1iBC/9JSXXkRGxNCWD/+qxjWMuAg960ANGnBcj768DfCh8Sll8xhbUGjyfWeJGa/9cfog==" />
 <div id="edit-section">
 <div class="container">
 <div class="row">
@@ -171,6 +171,102 @@
             <input type="checkbox" name="time[47]" id="time_47" value="47" />
             <label for="profile_11:00 PM">11:00 pm</label>
             <input type="checkbox" name="time[48]" id="time_48" value="48" />
+            <label for="profile_11:30 PM">11:30 pm</label>
+            <input type="checkbox" name="time[49]" id="time_49" value="49" />
+            <label for="profile_12:00 AM">12:00 am</label>
+            <input type="checkbox" name="time[50]" id="time_50" value="50" />
+            <label for="profile_12:30 AM">12:30 am</label>
+            <input type="checkbox" name="time[51]" id="time_51" value="51" />
+            <label for="profile_01:00 AM">01:00 am</label>
+            <input type="checkbox" name="time[52]" id="time_52" value="52" />
+            <label for="profile_01:30 AM">01:30 am</label>
+            <input type="checkbox" name="time[53]" id="time_53" value="53" />
+            <label for="profile_02:00 AM">02:00 am</label>
+            <input type="checkbox" name="time[54]" id="time_54" value="54" />
+            <label for="profile_02:30 AM">02:30 am</label>
+            <input type="checkbox" name="time[55]" id="time_55" value="55" />
+            <label for="profile_03:00 AM">03:00 am</label>
+            <input type="checkbox" name="time[56]" id="time_56" value="56" />
+            <label for="profile_03:30 AM">03:30 am</label>
+            <input type="checkbox" name="time[57]" id="time_57" value="57" />
+            <label for="profile_04:00 AM">04:00 am</label>
+            <input type="checkbox" name="time[58]" id="time_58" value="58" />
+            <label for="profile_04:30 AM">04:30 am</label>
+            <input type="checkbox" name="time[59]" id="time_59" value="59" />
+            <label for="profile_05:00 AM">05:00 am</label>
+            <input type="checkbox" name="time[60]" id="time_60" value="60" />
+            <label for="profile_05:30 AM">05:30 am</label>
+            <input type="checkbox" name="time[61]" id="time_61" value="61" />
+            <label for="profile_06:00 AM">06:00 am</label>
+            <input type="checkbox" name="time[62]" id="time_62" value="62" />
+            <label for="profile_06:30 AM">06:30 am</label>
+            <input type="checkbox" name="time[63]" id="time_63" value="63" />
+            <label for="profile_07:00 AM">07:00 am</label>
+            <input type="checkbox" name="time[64]" id="time_64" value="64" />
+            <label for="profile_07:30 AM">07:30 am</label>
+            <input type="checkbox" name="time[65]" id="time_65" value="65" />
+            <label for="profile_08:00 AM">08:00 am</label>
+            <input type="checkbox" name="time[66]" id="time_66" value="66" />
+            <label for="profile_08:30 AM">08:30 am</label>
+            <input type="checkbox" name="time[67]" id="time_67" value="67" />
+            <label for="profile_09:00 AM">09:00 am</label>
+            <input type="checkbox" name="time[68]" id="time_68" value="68" />
+            <label for="profile_09:30 AM">09:30 am</label>
+            <input type="checkbox" name="time[69]" id="time_69" value="69" />
+            <label for="profile_10:00 AM">10:00 am</label>
+            <input type="checkbox" name="time[70]" id="time_70" value="70" />
+            <label for="profile_10:30 AM">10:30 am</label>
+            <input type="checkbox" name="time[71]" id="time_71" value="71" />
+            <label for="profile_11:00 AM">11:00 am</label>
+            <input type="checkbox" name="time[72]" id="time_72" value="72" />
+            <label for="profile_11:30 AM">11:30 am</label>
+            <input type="checkbox" name="time[73]" id="time_73" value="73" />
+            <label for="profile_12:00 PM">12:00 pm</label>
+            <input type="checkbox" name="time[74]" id="time_74" value="74" />
+            <label for="profile_12:30 PM">12:30 pm</label>
+            <input type="checkbox" name="time[75]" id="time_75" value="75" />
+            <label for="profile_01:00 PM">01:00 pm</label>
+            <input type="checkbox" name="time[76]" id="time_76" value="76" />
+            <label for="profile_01:30 PM">01:30 pm</label>
+            <input type="checkbox" name="time[77]" id="time_77" value="77" />
+            <label for="profile_02:00 PM">02:00 pm</label>
+            <input type="checkbox" name="time[78]" id="time_78" value="78" />
+            <label for="profile_02:30 PM">02:30 pm</label>
+            <input type="checkbox" name="time[79]" id="time_79" value="79" />
+            <label for="profile_03:00 PM">03:00 pm</label>
+            <input type="checkbox" name="time[80]" id="time_80" value="80" />
+            <label for="profile_03:30 PM">03:30 pm</label>
+            <input type="checkbox" name="time[81]" id="time_81" value="81" />
+            <label for="profile_04:00 PM">04:00 pm</label>
+            <input type="checkbox" name="time[82]" id="time_82" value="82" />
+            <label for="profile_04:30 PM">04:30 pm</label>
+            <input type="checkbox" name="time[83]" id="time_83" value="83" />
+            <label for="profile_05:00 PM">05:00 pm</label>
+            <input type="checkbox" name="time[84]" id="time_84" value="84" />
+            <label for="profile_05:30 PM">05:30 pm</label>
+            <input type="checkbox" name="time[85]" id="time_85" value="85" />
+            <label for="profile_06:00 PM">06:00 pm</label>
+            <input type="checkbox" name="time[86]" id="time_86" value="86" />
+            <label for="profile_06:30 PM">06:30 pm</label>
+            <input type="checkbox" name="time[87]" id="time_87" value="87" />
+            <label for="profile_07:00 PM">07:00 pm</label>
+            <input type="checkbox" name="time[88]" id="time_88" value="88" />
+            <label for="profile_07:30 PM">07:30 pm</label>
+            <input type="checkbox" name="time[89]" id="time_89" value="89" />
+            <label for="profile_08:00 PM">08:00 pm</label>
+            <input type="checkbox" name="time[90]" id="time_90" value="90" />
+            <label for="profile_08:30 PM">08:30 pm</label>
+            <input type="checkbox" name="time[91]" id="time_91" value="91" />
+            <label for="profile_09:00 PM">09:00 pm</label>
+            <input type="checkbox" name="time[92]" id="time_92" value="92" />
+            <label for="profile_09:30 PM">09:30 pm</label>
+            <input type="checkbox" name="time[93]" id="time_93" value="93" />
+            <label for="profile_10:00 PM">10:00 pm</label>
+            <input type="checkbox" name="time[94]" id="time_94" value="94" />
+            <label for="profile_10:30 PM">10:30 pm</label>
+            <input type="checkbox" name="time[95]" id="time_95" value="95" />
+            <label for="profile_11:00 PM">11:00 pm</label>
+            <input type="checkbox" name="time[96]" id="time_96" value="96" />
             <label for="profile_11:30 PM">11:30 pm</label>
     </div>
 </div>
